Attempt to fix scrolling bugs + more accesibility
- Try to fix flexbox nested scrolling bugs
- Use `-webkit-scrollbar` to CSS to mask scrollbars a bit (for Safari, Chrome and other Webkit-based browsers)
- Make metadata keyboard-accessible + tooltips

--- a/client/css/zz_loom.css
+++ b/client/css/zz_loom.css
@@ -95,6 +95,16 @@ a {
   color: gray;
 }
 
+div::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+  background-color: #FFFFFF;
+}
+
+div::-webkit-scrollbar-thumb {
+  background: #AAAAAA;
+}
+
 h1 {
   font-size: 1.7em;
   margin-top: 0.5em;
